--- a/oblig2og3/css/responsivt.css
+++ b/oblig2og3/css/responsivt.css
@@ -1,4 +1,103 @@
-
+/* For mobil over 300px */
+@media(min-width:300px){
+	body{
+		height:100vh;
+		width:100vw;
+		margin:0;
+		font-size:2.4em;
+	}
+	.navigasjonsmeny{
+		display:inline-flex;
+		width:100%;
+		height:8vh;
+		justify-content:flex-start;
+	}
+	.liNavigasjon{
+		/*font-size:2.4em;*/
+		display:inline-flex;
+		padding:8% 1em 0 0;
+	}
+	.mainBakgrunnsbilete{
+		background-image: url("boyzinthehood.jpg");
+		width:100vw;
+		height:93vh;
+		background-size:cover;
+		overflow:hidden; /* Løysing #2 på margin-kollaps problem... Ser positivt ut, men endeleg resultat vil vise; lat stå intil videre */
+		/* Bilete er for stort i breidden i forhold til høgden. Dette gjer at biletet ikkje blir skarpt.
+		background-size:cover; gjer at me får sjå deler av biletet men får fortsatt behalde skarpheita, men me får ikkje sjå heile bilete.
+		Koden under setter biletet til å bruke 100% av gjenverande plass.
+		background-size:100vw 93vh; 
+		(Bruke samma men mindre bilete på små skjermstørrelsar for å få det til å passe fint? Deler av biletet må kløppast)*/
+	}
+	#btnTilPassasjer{
+		font-size:1em;
+		margin-left:5%;
+		margin-top:15%;
+		background-color:grey;
+	}
+	.btnTilSjaafor{
+		font-size:1em;
+	}
+	.mainSkjema{
+		width:90%;
+		height:50%;
+		margin:0 5% 0 5%;
+		background-color:rgba(255, 255, 255, 0.9); /*Transperant muligens bra her? Eller background-color:white; Style søk knapp svart(are)?*/
+	}
+	.mainSection{
+		display:flex;
+		flex-wrap:wrap;
+	}
+	.mainSelectOverskrift{
+		font-size:1.5em;
+		padding-top:1em;
+	} 
+	.mainInput, .mainSelectx2Verdi, .mainBtnSok{
+		font-size:1em;
+	}
+	.mainSelectOverskrift{
+		width:100%;
+		height:5%;
+		padding-bottom:1em;
+		text-align:center;
+		margin:0;
+	}
+	.mainSelectTekst{
+		height:40%;
+		width:40%;
+		margin-left:5%;
+	}
+	.mainSelectTekstP{
+		margin:1em 0 0.2em 0;
+	}
+	.mainSelectVerdi{
+		height:50%;
+		width:30%;
+		display:flex;
+		flex-direction:column;
+		vertical-align:top;
+	}
+	.mainSelectOption{
+		font-size:0.5em;
+	}
+	.mainInput, .mainSelectx2Verdi{
+		padding:0;
+		margin:1em 0 0 0;
+		border:1px black solid;
+	}
+	.mainSelectSok{
+		width:100%;
+	}
+	.mainBtnSok{
+		display:block;
+		width:90%;
+		height:90%;
+		margin:5% 5%;
+	}
+	.mainSelectOption{
+		display:inline-block;
+	}
+}
 
 
 
