--- a/oblig2og3/css/responsivt.css
+++ b/oblig2og3/css/responsivt.css
@@ -15,7 +15,11 @@
 	.liNavigasjon{
 		/*font-size:2.4em;*/
 		display:inline-flex;
-		padding:8% 1em 0 0;
+		padding:5% 1em 0 0;
+	}
+	.aLiNavigasjon{
+		text-decoration:none;
+		color:black;
 	}
 	.mainBakgrunnsbilete{
 		background-image: url("boyzinthehood.jpg");
@@ -40,7 +44,7 @@
 	}
 	.mainSkjema{
 		width:90%;
-		height:50%;
+		height:70%;
 		margin:0 5% 0 5%;
 		background-color:rgba(255, 255, 255, 0.9); /*Transperant muligens bra her? Eller background-color:white; Style søk knapp svart(are)?*/
 	}
