--- a/oblig2og3/css/responsivt.css
+++ b/oblig2og3/css/responsivt.css
@@ -37,59 +37,55 @@
 		font-size:1em;
 		margin-left:5%;
 		margin-top:15%;
-		background-color:grey;
+		background-color:white;
+		-webkit-appearance:none;
+		-webkit-border-radius:0;
 	}
 	.btnTilSjaafor{
 		font-size:1em;
+		-webkit-appearance:none;
+		-webkit-border-radius:0;
+		background-color:grey;
 	}
 	.mainSkjema{
 		width:90%;
 		height:70%;
 		margin:0 5% 0 5%;
-		background-color:rgba(255, 255, 255, 0.9); /*Transperant muligens bra her? Eller background-color:white; Style søk knapp svart(are)?*/
+		background-color:rgba(255, 255, 255, 0.9);
 	}
-	.mainSection{
+	.mainSectionOverskrift{
+		margin:0;
+		padding:5% 0 0 5%;
+		width:100%;
+	}
+	.mainSectionSection{
 		display:flex;
-		flex-wrap:wrap;
+		justify-content:space-between;
+		margin:0 15% 0 5%;
 	}
-	.mainSelectOverskrift{
-		font-size:1.5em;
-		padding-top:1em;
-	} 
-	.mainInput, .mainSelectx2Verdi, .mainBtnSok{
+	.mainP{
+		margin:5% 0 5% 0;
+	}
+	.mainInput{
+		width:40%;
+		height:100%;
+		margin:5% 0 5% 0;
 		font-size:1em;
 	}
-	.mainSelectOverskrift{
-		width:100%;
-		height:5%;
-		padding-bottom:1em;
-		text-align:center;
-		margin:0;
+	.mainTid{
+		font-size:1em;
+		margin:4% 0 4% 0;
 	}
-	.mainSelectTekst{
-		height:40%;
+	.mainPersoner{
 		width:40%;
-		margin-left:5%;
-	}
-	.mainSelectTekstP{
-		margin:1em 0 0.2em 0;
-	}
-	.mainSelectVerdi{
-		height:50%;
-		width:30%;
-		display:flex;
-		flex-direction:column;
-		vertical-align:top;
+		height:100%;
+		margin:4% 0 4% 0;
+		font-size:1em;
 	}
 	.mainSelectOption{
-		font-size:0.5em;
+		font-size:2em;
 	}
-	.mainInput, .mainSelectx2Verdi{
-		padding:0;
-		margin:1em 0 0 0;
-		border:1px black solid;
-	}
-	.mainSelectSok{
+	.mainSectionSok{
 		width:100%;
 	}
 	.mainBtnSok{
@@ -97,9 +93,7 @@
 		width:90%;
 		height:90%;
 		margin:5% 5%;
-	}
-	.mainSelectOption{
-		display:inline-block;
+		font-size:1em;
 	}
 }
 
