--- a/oblig2og3/css/rss.css
+++ b/oblig2og3/css/rss.css
@@ -1,3 +1,4 @@
+/*Denne fila brukes ikkje, men koden er her tilgjengelig om me skulle trenge han igjen*/
 rss {
 display: block;
 font-family: verdana, arial;
